--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,13 +108,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build Image
-        run: make image IMAGE=ghcr.io/${{env.REPO}}:${{ github.ref_name }}
+        run: make image IMAGE=ghcr.io/${{env.REPO}}:master
 
       - name: Tag latest
-        run: docker tag ghcr.io/${{env.REPO}}:${{ github.ref_name }} ghcr.io/${{env.REPO}}:latest
+        run: docker tag ghcr.io/${{env.REPO}}:master ghcr.io/${{env.REPO}}:latest
 
       - name: Push
-        run: docker push ghcr.io/${{env.REPO}}:${{ github.ref_name }}
+        run: docker push ghcr.io/${{env.REPO}}:master
 
       - name: Push Latest
         run: docker push ghcr.io/${{env.REPO}}:latest
