Feat/docker package (#3)
* feat: deploy github docker package

* feat: added dockerfile

* feat: updated docker tag

* feat: updated repo name

* feat: chnaged go version

* fea: updated docker tag

* feat: updated secrets

* feat: updated token

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,3 +89,29 @@ jobs:
           ./artifacts/*
         body_path: ./CHANGELOG.md
         draft: false
+
+  docker-build:
+    runs-on: ubuntu-latest
+    name: Build the docker image
+    steps:
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB }}
+
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Build Image
+        run: make image IMAGE=ghcr.io/${{env.REPO}}:${{ github.ref_name }}
+
+      - name: Tag latest
+        run: docker tag ghcr.io/${{env.REPO}}:${{ github.ref_name }} ghcr.io/${{env.REPO}}:latest
+
+      - name: Push
+        run: docker push ghcr.io/${{env.REPO}}:${{ github.ref_name }}
+
+      - name: Push Latest
+        run: docker push ghcr.io/${{env.REPO}}:latest
