feat: deploy package

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -120,3 +120,12 @@ jobs:
 
       - name: Push Latest
         run: docker push ghcr.io/${{env.REPO}}:latest
+
+      - name: Build and push Docker image
+        id: push
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
