--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,6 +101,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Build the docker image
     steps:
+
+      - name: Checkout
+        uses: actions/checkout@v4
       # - name: Login to GitHub Container Registry
       #   uses: docker/login-action@v3
       #   with:
@@ -115,20 +118,23 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB }}
 
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build Image
-        run: make image IMAGE=ghcr.io/${{env.REPO}}:${{ github.ref_name }}
+        run: make image IMAGE=ghcr.io/{{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: Tag latest
-        run: docker tag ghcr.io/${{env.REPO}}:${{ github.ref_name }} ghcr.io/${{env.REPO}}:latest
+      # - name: Tag latest
+      #   run: docker tag ghcr.io/${{env.REPO}}:${{ github.ref_name }} ghcr.io/${{env.REPO}}:latest
 
       - name: Push
-        run: docker push ghcr.io/${{env.REPO}}:${{ github.ref_name }}
+        run: docker push ghcr.io/{{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: Push Latest
-        run: docker push ghcr.io/${{env.REPO}}:latest
+      # - name: Push Latest
+      #   run: docker push ghcr.io/${{env.REPO}}:latest
 
       # - name: Build and push Docker image
       #   id: push
