feat:custom workflow for enigma docker

--- a/action.yml
+++ b/action.yml
@@ -17,10 +17,9 @@ inputs:
 
 runs:
   using: 'docker'
-  image: 'Dockerfile'
-  env:
-    DOCKER_IMAGE: ${{ inputs.docker_image }}
-    DOCKER_TAG: ${{ inputs.docker_tag }}
+  image: 'your-docker-image:latest'
   args:
     - ${{ inputs.command }}
+    - ${{ inputs.docker_image }}
+    - ${{ inputs.docker_tag }}
     - ${{ inputs.cleanup }}
