--- a/action.yml
+++ b/action.yml
@@ -1,17 +1,16 @@
 name: 'Enigma Docker Build and Publish'
 description: 'Builds, scans, tags, and pushes Docker images using the Enigma tool'
-
 inputs:
   command:
     description: 'Command to run (bake or publish)'
     required: true
-  docker_image:
+  DOCKER_IMAGE:
     description: 'Docker image name'
     required: true
-  docker_tag:
+  DOCKER_TAG:
     description: 'Docker image tag'
     required: true
-  cleanup:
+  CLEANUP:
     description: 'Cleanup after push (true or false)'
     required: false
     default: 'true'
@@ -19,8 +18,9 @@ inputs:
 runs:
   using: 'docker'
   image: 'Dockerfile'
+  env:
+    DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
+    DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
+    CLEANUP: ${{ inputs.CLEANUP }}
   args:
     - ${{ inputs.command }}
-    - ${{ inputs.DOCKER_IMAGE }}
-    - ${{ inputs.DOCKER_TAG }}
-    - ${{ inputs.CLEANUP }}
