--- a/.github/workflows/docker-build-publish.yml
+++ b/.github/workflows/docker-build-publish.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Build and Scan Docker Image
         uses: ./
         with:
@@ -21,6 +24,8 @@ jobs:
           DOCKER_IMAGE: hello-custom-workflow
           DOCKER_TAG: shivamkumar28dec/enigma:v0
           CLEANUP: 'true'
+        env:
+          DOCKER_HOST: unix:///var/run/docker.sock
 
       - name: Publish Docker Image
         uses: ./
@@ -29,3 +34,5 @@ jobs:
           DOCKER_IMAGE: hello-custom-workflow
           DOCKER_TAG: shivamkumar28dec/enigma:v0
           CLEANUP: 'true'
+        env:
+          DOCKER_HOST: unix:///var/run/docker.sock
