--- a/action.yml
+++ b/action.yml
@@ -21,5 +21,8 @@ runs:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
     CLEANUP: ${{ inputs.CLEANUP }}
+    AWS_ACCESS_KEY_ID: ${{ inputs.AWS_ACCESS_KEY_ID }}
+    AWS_SECRET_ACCESS_KEY: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
+    AWS_REGION: ${{ inputs.AWS_REGION }}
   args:
     - ${{ inputs.command }}
