--- a/action.yml
+++ b/action.yml
@@ -10,10 +10,10 @@ inputs:
   DOCKER_TAG:
     description: 'Docker image tag'
     required: true
-  CLEANUP:
-    description: 'Cleanup after push (true or false)'
-    required: false
-    default: 'true'
+  # CLEANUP:
+  #   description: 'Cleanup after push (true or false)'
+  #   required: false
+  #   default: 'true'
   # AWS_ACCESS_KEY_ID:
   #   description: 'AWS Access Key ID'
   #   required: true
@@ -29,7 +29,7 @@ runs:
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
-    CLEANUP: ${{ inputs.CLEANUP }}
+    # CLEANUP: ${{ inputs.CLEANUP }}
     # AWS_ACCESS_KEY_ID: ${{ inputs.AWS_ACCESS_KEY_ID }}
     # AWS_SECRET_ACCESS_KEY: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
     # AWS_REGION: ${{ inputs.AWS_REGION }}
