--- a/action.yml
+++ b/action.yml
@@ -23,16 +23,20 @@ inputs:
   # AWS_SECRET_ACCESS_KEY:
   #   description: 'AWS Secret Access Key'
   #   required: true
-  # AWS_REGION:
-  #   description: 'AWS Region'
-  #   required: true
+  AWS_REGION:
+    description: 'AWS Region'
+    required: true
+  AWS_ACCOUNT_ID:
+    description: 'AWS Account ID'
+    required: true
 runs:
   using: 'docker'
   image: 'Dockerfile'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
-
+    AWS_ACCOUNT_ID: ${{ inputs.AWS_ACCOUNT_ID }}
+    AWS_REGION: ${{ inputs.AWS_REGION }}
     # CLEANUP: ${{ inputs.CLEANUP }}
     # AWS_ACCESS_KEY_ID: ${{ inputs.AWS_ACCESS_KEY_ID }}
     # AWS_SECRET_ACCESS_KEY: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
