--- a/action.yml
+++ b/action.yml
@@ -13,10 +13,10 @@ inputs:
   # SCAN:
   #  description: 'Keep false when working with Workflows'
   #  required: 
-  # CLEANUP:
-  #   description: 'Cleanup after push (true or false)'
-  #   required: false
-  #   default: 'true'
+  CLEANUP:
+    description: 'Cleanup after push (true or false)'
+    required: false
+    default: 'false'
   # AWS_ACCESS_KEY_ID:
   #   description: 'AWS Access Key ID'
   #   required: true
@@ -37,6 +37,7 @@ runs:
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
     AWS_ACCOUNT_ID: ${{ inputs.AWS_ACCOUNT_ID }}
     AWS_REGION: ${{ inputs.AWS_REGION }}
+    CLEANUP: ${{ inputs.AWS_REGION }}
     # CLEANUP: ${{ inputs.CLEANUP }}
     # AWS_ACCESS_KEY_ID: ${{ inputs.AWS_ACCESS_KEY_ID }}
     # AWS_SECRET_ACCESS_KEY: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
