feat:changed tag to v1

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,10 +105,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build Image
-        run: make image IMAGE=ghcr.io/${{env.REPO}}:${{ github.ref_name }}
+        run: make image IMAGE=ghcr.io/${{env.REPO}}:v1
 
       - name: Tag latest
-        run: docker tag ghcr.io/${{env.REPO}}:${{ github.ref_name }} ghcr.io/${{env.REPO}}:latest
+        run: docker tag ghcr.io/${{env.REPO}}:v1 ghcr.io/${{env.REPO}}:latest
 
       # - name: Push
       #   run: docker push ghcr.io/${{env.REPO}}:${{ github.ref_name }}
