feat: changed required value to false in action.yml

--- a/action.yml
+++ b/action.yml
@@ -16,10 +16,10 @@ inputs:
     default: 'false'
   AWS_REGION:
     description: 'AWS Region'
-    required: true
+    required: false
   AWS_ACCOUNT_ID:
     description: 'AWS Account ID'
-    required: true
+    required: false
 runs:
   using: 'docker'
   image: 'Dockerfile'
