--- a/action.yml
+++ b/action.yml
@@ -42,6 +42,9 @@ inputs:
   GITHUB_USERNAME: 
     description: 'GitHub Username'
     required: false
+  GCP_SERVICE_ACCOUNT_EMAIL:
+    description: 'Service Account Mail'
+    required: false
 
 runs:
   using: 'docker'
@@ -59,6 +62,7 @@ runs:
     DOCKER_PASSWORD: ${{ inputs.DOCKER_PASSWORD }}
     TOKEN: ${{ inputs.TOKEN }}
     GITHUB_USERNAME: ${{ inputs. GITHUB_USERNAME }}
+    GCP_SERVICE_ACCOUNT_EMAIL: ${{ inputs.GCP_SERVICE_ACCOUNT_EMAI }}
 
   args:
     - ${{ inputs.command }}
