--- a/action.yml
+++ b/action.yml
@@ -58,8 +58,7 @@ inputs:
   
 runs:
   using: 'docker'
-  # image: 'docker://ghcr.io/clouddrove/enigma:v0.0.6'
-  image: 'Dockerfile'
+  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.6'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
