--- a/action.yml
+++ b/action.yml
@@ -51,10 +51,14 @@ inputs:
   AZURE_CLIENT_SECRET:
     description: 'Client Secret'
     required: false
+  DOCKERFILE_PATH:
+    description: 'Path to the Dockerfile'
+    required: false
+    default: './Dockerfile'
   
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.6'
+  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.7'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
@@ -71,6 +75,7 @@ runs:
     AZURE_CLIENT_ID: ${{ inputs.AZURE_CLIENT_ID }}
     AZURE_TENANT_ID: ${{ inputs.AZURE_TENANT_ID }}
     AZURE_CLIENT_SECRET: ${{ inputs.AZURE_CLIENT_SECRET }}
+    DOCKERFILE_PATH: ${{ inputs.DOCKERFILE_PATH }}
 
   args:
     - ${{ inputs.command }}
