--- a/action.yml
+++ b/action.yml
@@ -55,10 +55,12 @@ inputs:
     description: 'Path to the Dockerfile'
     required: false
     default: './Dockerfile'
+  BUILD_ARCHITECTURE:
+    description: 'Build Architecture'
   
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.7'
+  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.8'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
@@ -76,6 +78,6 @@ runs:
     AZURE_TENANT_ID: ${{ inputs.AZURE_TENANT_ID }}
     AZURE_CLIENT_SECRET: ${{ inputs.AZURE_CLIENT_SECRET }}
     DOCKERFILE_PATH: ${{ inputs.DOCKERFILE_PATH }}
-
+    BUILD_ARCHITECTURE: ${{ inputs.BUILD_ARCHITECTURE }}
   args:
     - ${{ inputs.command }}
