--- a/action.yml
+++ b/action.yml
@@ -71,7 +71,7 @@ inputs:
 runs:
   using: 'docker'
   # image: 'docker://ghcr.io/clouddrove/enigma:v0.0.8'
-  image: Dockerfile
+  image: 'Dockerfile'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
