--- a/action.yml
+++ b/action.yml
@@ -70,8 +70,7 @@ inputs:
   
 runs:
   using: 'docker'
-  # image: 'docker://ghcr.io/clouddrove/enigma:v0.0.8'
-  image: 'Dockerfile'
+  image: 'docker://ghcr.io/clouddrove/enigma:v0.0.8'
   env:
     DOCKER_IMAGE: ${{ inputs.DOCKER_IMAGE }}
     DOCKER_TAG: ${{ inputs.DOCKER_TAG }}
